project2/test/test_11711111_4.out
Error type 5 at Line 8: unmatching type on both sides of assignment
Error type 14 at Line 9: no such member: previous
Error type 5 at Line 9: unmatching type on both sides of assignment
Error type 13 at Line 10: accessing with non-struct variable
